--- a/note-service.properties
+++ b/note-service.properties
@@ -2,3 +2,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/note
 spring.datasource.username=root
 spring.datasource.password=root
 #spring.datasource.driver-class-name=
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
