--- a/note-service.properties
+++ b/note-service.properties
@@ -4,4 +4,5 @@ spring.datasource.password=root
 #spring.datasource.driver-class-name=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+server.port=1984
 
