--- a/note-service-test.properties
+++ b/note-service-test.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/note_test
+spring.datasource.url=jdbc:mysql://localhost:3306/note_test?useSSL=false&serverTimezone=EST
 spring.datasource.username=root
 spring.datasource.password=root
 #spring.datasource.driver-class-name=
