--- a/note-service-test.properties
+++ b/note-service-test.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/note_test?useSSL=false&serverT
 spring.datasource.username=root
 spring.datasource.password=root
 #spring.datasource.driver-class-name=
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 server.port=1984
 
